--- a/gui/ColorizeSurfaceOptions.ui
+++ b/gui/ColorizeSurfaceOptions.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>221</width>
-    <height>173</height>
+    <height>179</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <bool>false</bool>
      </property>
      <property name="text">
-      <string>Current frame</string>
+      <string>C&amp;urrent frame</string>
      </property>
      <property name="checked">
       <bool>true</bool>
@@ -36,7 +36,7 @@
       <bool>false</bool>
      </property>
      <property name="text">
-      <string>All frames</string>
+      <string>A&amp;ll frames</string>
      </property>
      <property name="checked">
       <bool>false</bool>
@@ -63,27 +63,50 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="5" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Color display</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="5" column="1">
     <widget class="QComboBox" name="comboBoxColorDisplay">
      <property name="enabled">
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
+   <item row="4" column="0" colspan="2">
     <widget class="QPushButton" name="buttonCompute">
      <property name="enabled">
       <bool>false</bool>
      </property>
      <property name="text">
       <string>Compute</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Occlusion threshold</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QDoubleSpinBox" name="doubleSpinBoxOcclusionThreshold">
+     <property name="toolTip">
+      <string>Points at higher depth difference are considered occluded</string>
+     </property>
+     <property name="decimals">
+      <number>1</number>
+     </property>
+     <property name="minimum">
+      <double>-1.000000000000000</double>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
      </property>
     </widget>
    </item>
