--- a/gui/VolumeOptions.ui
+++ b/gui/VolumeOptions.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>247</width>
-    <height>78</height>
+    <width>263</width>
+    <height>115</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,27 +24,27 @@
    <item row="0" column="1">
     <widget class="QDoubleSpinBox" name="doubleSpinBoxSurfaceThreshold">
      <property name="minimum">
-      <double>-100.0</double>
+      <double>-100.000000000000000</double>
      </property>
      <property name="maximum">
-      <double>100.0</double>
+      <double>100.000000000000000</double>
+     </property>
+     <property name="singleStep">
+      <double>0.100000000000000</double>
      </property>
      <property name="value">
       <double>0.000000000000000</double>
      </property>
-     <property name="singleStep">
-      <double>0.1</double>
-     </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="2" column="0">
     <widget class="QCheckBox" name="checkBoxColorizeSurface">
      <property name="text">
       <string>Colorize surface</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QToolButton" name="toolButtonColorizeSurfaceMenu">
      <property name="enabled">
       <bool>false</bool>
@@ -63,6 +63,32 @@
      </property>
      <property name="autoRaise">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Occlusion threshold</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QDoubleSpinBox" name="doubleSpinBoxOcclusionThreshold">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="toolTip">
+      <string>Points at higher depth difference are considered occluded</string>
+     </property>
+     <property name="decimals">
+      <number>1</number>
+     </property>
+     <property name="minimum">
+      <double>-1.000000000000000</double>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
      </property>
     </widget>
    </item>
