--- a/gui/VolumeOptions.ui
+++ b/gui/VolumeOptions.ui
@@ -37,14 +37,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="4" column="0">
     <widget class="QCheckBox" name="checkBoxColorizeSurface">
      <property name="text">
       <string>Colorize surface</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="4" column="1">
     <widget class="QToolButton" name="toolButtonColorizeSurfaceMenu">
      <property name="enabled">
       <bool>false</bool>
@@ -66,14 +66,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="3" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Occlusion threshold</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="3" column="1">
     <widget class="QDoubleSpinBox" name="doubleSpinBoxOcclusionThreshold">
      <property name="enabled">
       <bool>false</bool>
@@ -89,6 +89,19 @@
      </property>
      <property name="value">
       <double>1.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QCheckBox" name="checkBoxRemoveOcclusion">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>Remove occlusion</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
