--- a/gui/ColorizeSurfaceOptions.ui
+++ b/gui/ColorizeSurfaceOptions.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>318</width>
-    <height>179</height>
+    <width>432</width>
+    <height>246</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,14 +46,14 @@
      </attribute>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="5" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Frame sampling</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="5" column="1">
     <widget class="QSpinBox" name="spinBoxFrameSampling">
      <property name="enabled">
       <bool>false</bool>
@@ -63,7 +63,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2">
+   <item row="6" column="0" colspan="2">
     <widget class="QPushButton" name="buttonCompute">
      <property name="enabled">
       <bool>false</bool>
@@ -73,14 +73,14 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
+   <item row="7" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Color display</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="1">
+   <item row="7" column="1">
     <widget class="QComboBox" name="comboBoxColorDisplay">
      <property name="enabled">
       <bool>false</bool>
@@ -102,8 +102,8 @@
      </item>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QCheckBox" name="checkBoxRemoveOcclusion">
+   <item row="3" column="0">
+    <widget class="QCheckBox" name="checkBoxRemoveOccluded">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -115,14 +115,14 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="4" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Occlusion threshold</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="4" column="1">
     <widget class="QDoubleSpinBox" name="doubleSpinBoxOcclusionThreshold">
      <property name="enabled">
       <bool>false</bool>
@@ -138,6 +138,19 @@
      </property>
      <property name="value">
       <double>0.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QCheckBox" name="checkBoxRemoveMasked">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>Remove masked surface color</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
