Use mesh_coloration from kwiver.

--- a/gui/ColorizeSurfaceOptions.ui
+++ b/gui/ColorizeSurfaceOptions.ui
@@ -87,17 +87,17 @@
      </property>
      <item>
       <property name="text">
-       <string>MeanColoration</string>
+       <string>mean</string>
       </property>
      </item>
      <item>
       <property name="text">
-       <string>MedianColoration</string>
+       <string>median</string>
       </property>
      </item>
      <item>
       <property name="text">
-       <string>NbProjectedDepthMap</string>
+       <string>count</string>
       </property>
      </item>
     </widget>
