--- a/gui/DepthMapView.ui
+++ b/gui/DepthMapView.ui
@@ -31,7 +31,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QVTKOpenGLWidget" name="renderWidget" native="true"/>
+    <widget class="QVTKOpenGLNativeWidget" name="renderWidget" native="true"/>
    </item>
   </layout>
   <action name="actionDisplayMode">
@@ -57,9 +57,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QVTKOpenGLWidget</class>
+   <class>QVTKOpenGLNativeWidget</class>
    <extends>QWidget</extends>
-   <header location="global">QVTKOpenGLWidget.h</header>
+   <header location="global">QVTKOpenGLNativeWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
