Hook up computing camera from registration points
Add UI to request computing a camera from ground control and camera
registration points. Hook up implementation of this using the
resection_camera algorithm from KWIVER (right now hard-coded to use the
"ocv" implementation).

--- a/gui/CameraView.ui
+++ b/gui/CameraView.ui
@@ -226,6 +226,11 @@
     <string>Ctrl+R</string>
    </property>
   </action>
+  <action name="actionComputeCamera">
+   <property name="text">
+    <string>Compute Camera</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
