Add icon to points with CRP on current frame
Modify GroundControlPointsModel to provide an icon on points which have
a camera registration point on the active frame. Modify various bits to
update the icons and active frame as needed. Simplify SVG for points
that have been georegistered.

--- a/gui/icons/icons.qrc
+++ b/gui/icons/icons.qrc
@@ -123,5 +123,6 @@
   </qresource>
   <qresource prefix="icons/scalable">
     <file alias="registered">scalable/registered.svg</file>
+    <file alias="surveyed">scalable/surveyed.svg</file>
   </qresource>
 </RCC>
