Add registrations to ground control points tree
Modify GroundControlPointsModel, making it a proper tree, with
registration points supplying the child items. This provides a mechanism
to see the set of frames for which a point has camera registrations.

--- a/gui/GroundControlPointsView.ui
+++ b/gui/GroundControlPointsView.ui
@@ -16,20 +16,14 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTreeView" name="pointsList">
-     <property name="rootIsDecorated">
-      <bool>false</bool>
-     </property>
-     <property name="uniformRowHeights">
+     <property name="alternatingRowColors">
       <bool>true</bool>
-     </property>
-     <property name="itemsExpandable">
-      <bool>false</bool>
      </property>
      <property name="allColumnsShowFocus">
       <bool>true</bool>
      </property>
      <attribute name="headerDefaultSectionSize">
-      <number>50</number>
+      <number>75</number>
      </attribute>
     </widget>
    </item>
