Improve GCP tree appearance
Modify GCP tree so that points have some right padding (so frames are
visually at a different level), and also add an icon to frames. Both
these changes make it easier to tell frame numbers apart from point
numbers.

--- a/gui/icons/icons.qrc
+++ b/gui/icons/icons.qrc
@@ -122,6 +122,7 @@
     <file alias="telesculptor@2x">128x128@2/telesculptor.png</file>
   </qresource>
   <qresource prefix="icons/scalable">
+    <file alias="camera">scalable/camera.svg</file>
     <file alias="registered">scalable/registered.svg</file>
     <file alias="surveyed">scalable/surveyed.svg</file>
   </qresource>
