Use different keyboard shortcuts
Don't use arrow keys for frame and GCP navigation, as these get "eaten"
even in some instances when they should not be and result in odd
interactions with some widgets.

--- a/gui/MainWindow.ui
+++ b/gui/MainWindow.ui
@@ -637,7 +637,7 @@
     <string>Previous Frame</string>
    </property>
    <property name="shortcut">
-    <string>Left</string>
+    <string>[</string>
    </property>
   </action>
   <action name="actionFrameNext">
@@ -648,7 +648,7 @@
     <string>Next Frame</string>
    </property>
    <property name="shortcut">
-    <string>Right</string>
+    <string>]</string>
    </property>
   </action>
   <action name="actionGcpPrevious">
@@ -656,7 +656,7 @@
     <string>Previous Point</string>
    </property>
    <property name="shortcut">
-    <string>Up</string>
+    <string>,</string>
    </property>
   </action>
   <action name="actionGcpNext">
@@ -667,7 +667,7 @@
     <string>Next Point</string>
    </property>
    <property name="shortcut">
-    <string>Down</string>
+    <string>.</string>
    </property>
   </action>
  </widget>
