Initial ability to reconstruct from manual tracks
Introduce an action to attempt reconstruction using camera registration
points (i.e. manual feature tracks). This is partly implemented; it runs
and, in theory, extracts cameras. However, as I have not yet been able
to get it to run successfully, I am unable to verify the functionality.
Also, converting the reconstructed landmarks to GCPs is not yet
implemented (for similar reasons).

--- a/gui/MainWindow.ui
+++ b/gui/MainWindow.ui
@@ -122,6 +122,8 @@
      <addaction name="actionVariableLens"/>
      <addaction name="actionFixGeoOrigin"/>
     </widget>
+    <addaction name="actionRebuildScene"/>
+    <addaction name="separator"/>
     <addaction name="actionCancelComputation"/>
     <addaction name="separator"/>
     <addaction name="menuAdvanced"/>
@@ -668,6 +670,14 @@
    </property>
    <property name="shortcut">
     <string>.</string>
+   </property>
+  </action>
+  <action name="actionRebuildScene">
+   <property name="text">
+    <string>Reb&amp;uild Scene</string>
+   </property>
+   <property name="toolTip">
+    <string>Reconstruct cameras and ground control points from camera registration points</string>
    </property>
   </action>
  </widget>
