show camera path by default

--- a/gui/CameraOptions.ui
+++ b/gui/CameraOptions.ui
@@ -181,6 +181,9 @@
        <property name="text">
         <string>Camera Path</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
