--- a/gui/FeatureOptions.ui
+++ b/gui/FeatureOptions.ui
@@ -17,7 +17,7 @@
    <item>
     <layout class="QFormLayout" name="formLayout">
      <item row="1" column="0" colspan="2">
-      <layout class="QHBoxLayout" name="trailLayoutWithDesc" stretch="0,0">
+      <layout class="QHBoxLayout" name="trailLayoutWithDesc" stretch="1,0">
        <item>
         <widget class="QCheckBox" name="showTrailsWithDesc">
          <property name="enabled">
@@ -27,7 +27,7 @@
           <string>Trails w Desc.</string>
          </property>
          <property name="checked">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -38,8 +38,8 @@
          </property>
          <property name="color" stdset="0">
           <color>
-           <red>0</red>
-           <green>192</green>
+           <red>170</red>
+           <green>0</green>
            <blue>0</blue>
           </color>
          </property>
@@ -125,7 +125,7 @@
            <number>4</number>
           </property>
           <property name="value">
-           <number>2</number>
+           <number>250</number>
           </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
