--- a/doc/_static/css/custom.css
+++ b/doc/_static/css/custom.css
@@ -44,6 +44,13 @@ img.icon-16 {
   width: 16px;
 }
 
+img.icon-22 {
+  position: relative;
+  bottom: calc(0.5em - 6px);
+  height: 22px;
+  width: 22px;
+}
+
 .glyph {
   position: relative;
   bottom: calc(0.5em - 6px);
